# idta-smt-walker

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: walk_all_idta_templates.py
src/idta_smt_walker/: __init__.py  helpers.py  models.py  walker.py
tests/: test_models.py  test_walker.py
